--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "nest start --watch",
+    "start:dev": "nest start --watch && dotenv -e .env",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -19,8 +19,8 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "db:restart": "docker compose down && docker compose up -d && timeout 1",
-    "pretest:int": "npm run db:restart && dotenv -e .env.test -- prisma migrate reset --force",
+    "test:db:restart": "docker-compose rm -svf test-db && docker compose up -d && timeout 1",
+    "pretest:int": "npm run test:db:restart && timeout 1 && dotenv -e .env.test -- prisma migrate dev",
     "test:int": "dotenv -e .env.test -- jest -i --no-cache --watch --config ./test/jest-int.json"
   },
   "dependencies": {
